# le-prompt

./: .gitignore  .gitmodules  CMakeLists.txt  Parse_JSON.cpp  Parse_JSON.hpp  Parse_TOML.hpp  TODO.md  a.out  arguments.cpp  arguments.hpp  colorutils.hpp  config.json  config.toml  config.yaml  git3.hpp  host.cpp  main.cpp  modules.hpp  prompt.cpp  prompt.hpp  promptOptions.hpp  prompt_config.hpp  prompt_options.hpp  readme.md  segment.cpp  segment.hpp  segments.cpp  segments.hpp  shell_info.hpp  string.hpp  test  test.cpp  test.toml  theme.cpp  theme.hpp  theme.json  themeParser.cpp  themes.toml  threadedSegment.cpp  threadedSegment.hpp  (+5 more)
docs/: colors.js  index.html  macos-minimal.css  style.css
include/: rapidjson alias
le-prompt.github.io/: index.js  macos.css
lib/: cpptoml.hpp  libgit2.backup
segments/: exit.cpp  git.cpp  git2.cpp  git2.hpp  host.cpp  newline.cpp  pwd.cpp  root.cpp  user.cpp
src/: LICENSE  arguments.hpp  color.hpp  colorutils.hpp  config.cpp  config.hpp  config.json  constructor.cpp  constructor.hpp  main.cpp  module.hpp  modules.cpp  modules.hpp  other.json  parse_JSON.cpp  parse_JSON.hpp  presets.cpp  printer.hpp  prompt.cpp  prompt.hpp  prompt_config.hpp  segment.hpp  segments.cpp  segments.hpp  shell.hpp  shell_info.hpp  subprompt.cpp  subprompt.hpp  symbols.hpp  test.sh  theme.hpp  themes.json  threadedSegment.hpp  toml_parse.cpp  toml_parse.hpp  utils.cpp  utils.hpp
src/presets/: alloptions.json  alloptions.toml  default.json  minimal.json  minimal.toml  pure.json  pure.toml  solarized.json  solarized.toml  testconfig.toml
src/resources/themes/: default.json  low-contrast.json  powerlevel9k.json  solarized-dark.json  solarized-light.json
src/segments/: aws.cpp  battery.cpp  context.cpp  dir.cpp  docker.cpp  exit.cpp  git.cpp  git2.cpp  git2.hpp  hg.cpp  host.cpp  jobs.cpp  load.cpp  newline.cpp  node.cpp  perms.cpp  pwd.cpp  root.cpp  shell.cpp  ssh.cpp  status.cpp  time.cpp  user.cpp  venv.cpp  virtualenv.cpp
src/themes/: base16-dark.json  default.json  low-contrast.json  solarized-light.json
test/: a.out  test  test.cpp  test.txt
test/.hg/: dirstate  undo.dirstate
test/.hg/cache/: branch2-served  manifestfulltextcache  rbc-revs-v1  tags2-visible
test/.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo
test/.hg/store/data/: a.out.i  nlohmann.hpp.i  test.cpp.i  test.i  test.txt.i
test/.hg/store/data/toml11/: _c_make_lists.txt.i  _l_i_c_e_n_s_e.i  _r_e_a_d_m_e.md.i  appveyor.yml.i  toml.hpp.i  ~2egitignore.i  ~2etravis.yml.i
test/.hg/store/data/toml11/tests/: _c_make_lists.txt.i  check.cpp.i  check__toml__test.cpp.i  test__datetime.cpp.i  test__error__detection.cpp.i  test__extended__conversions.cpp.i  test__format__error.cpp.i  test__from__toml.cpp.i  test__get.cpp.i  test__get__related__func.cpp.i  test__lex__aux.hpp.i  test__lex__boolean.cpp.i  test__lex__datetime.cpp.i  test__lex__floating.cpp.i  test__lex__integer.cpp.i  test__lex__key__comment.cpp.i  test__lex__string.cpp.i  test__literals.cpp.i  test__multiple__translation__unit__1.cpp.i  test__multiple__translation__unit__2.cpp.i  test__parse__array.cpp.i  test__parse__aux.hpp.i  test__parse__boolean.cpp.i  test__parse__datetime.cpp.i  test__parse__file.cpp.i  test__parse__floating.cpp.i  test__parse__inline__table.cpp.i  test__parse__integer.cpp.i  test__parse__key.cpp.i  test__parse__string.cpp.i  test__parse__table.cpp.i  test__parse__table__key.cpp.i  test__parse__unicode.cpp.i  test__result.cpp.i  test__serialize__file.cpp.i  (+3 more)
toml/: Parse_TOML.cpp  Parse_TOML.hpp
web/: index.html  index.js  style.css  test.html
(+1 files in other folders)
